# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "jni_defines",
    hdrs = ["jni_defines.h"],
)

cc_library(
    name = "jni_jvm_interface",
    srcs = ["jni_jvm_interface.cc"],
    hdrs = ["jni_jvm_interface.h"],
    deps = [
        "@abseil-cpp//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "jni_buffer_util",
    srcs = ["jni_buffer_util.cc"],
    hdrs = ["jni_buffer_util.h"],
    deps = [
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/types:span",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "jni_string_util",
    srcs = ["jni_string_util.cc"],
    hdrs = ["jni_string_util.h"],
    deps = [
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/strings:string_view",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "status_jni_helper",
    srcs = ["status_jni_helper.cc"],
    hdrs = ["status_jni_helper.h"],
    deps = [
        ":jni_jvm_interface",
        ":jni_string_util",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "jni_proto_util",
    srcs = ["jni_proto_util.cc"],
    hdrs = ["jni_proto_util.h"],
    deps = [
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@protobuf//:protobuf_lite",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

filegroup(
    name = "cinterop_headers",
    srcs = glob(["*_native.h"]),
)

cc_library(
    name = "cinterop",
    deps = [
        ":status_native",
    ],
)

cc_library(
    name = "jni",
    deps = [
        ":status_jni",
    ],
)

cc_library(
    name = "status_jni",
    srcs = ["status_jni.cc"],
    deps = [
        ":jni_defines",
        ":jni_string_util",
        ":status_jni_helper",
        ":status_native",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = True,
)

cc_library(
    name = "status_native",
    srcs = ["status_native.cc"],
    hdrs = ["status_native.h"],
    deps = [
        "@abseil-cpp//absl/status",
    ],
    alwayslink = True,
)
