# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "copy_on_write",
    hdrs = ["copy_on_write.h"],
    deps = [
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_test(
    name = "copy_on_write_test",
    srcs = ["copy_on_write_test.cc"],
    deps = [
        ":copy_on_write",
        "@abseil-cpp//absl/hash:hash_testing",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "float",
    hdrs = ["float.h"],
)
